--- a/Gato.css
+++ b/Gato.css
@@ -1,3 +1,18 @@
+body{
+    background-image: url(/fondo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.letra{
+    
+}
+h1{
+    font-size: 100px;
+    margin-left: 33%;
+    color: #fff;
+    transition-duration: 2s;
+
+}
 .cell {
     width: 100px;
     height: 100px;
@@ -5,12 +20,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
+    color: #fff;
+    font-size: 90px;
+    background-image: url(/mewing-cat-mewing.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
     cursor: pointer;
+}
+.cell:hover{
+    box-shadow: 0 0 60px purple;
 }
 
 .tablero {
     display: grid;
     grid-template-columns: repeat(3, 100px);
     gap: 1px ;
+    justify-content: center;
+    margin-left: 1%;
 }
